<resources>
    <string name="app_name">NoWOL</string>

    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>

    <string name="statusLabelMain">"Status: "</string>

    <string name="powerBntMain">Power</string>
    <string name="resetBtnMain">Reset</string>
    <string name="pwr5BntMain">Power 5sec</string>

    <string name="refreshBnt">Refresh</string>

    <string name="hostLblMain">"Host IP: "</string>
    <string name="statusTxtMain">Unknown</string>
    <string name="updateBtnMain">Update system status</string>
    <string name="hostNameDefault">http://192.168.1.3</string>
    <string name="hostChBntMain">Change host address</string>
    <string name="pupUpHostBtn">Submit</string>
    <string name="statusOnline">Online</string>
    <string name="statusOffline">Offline</string>
    <string name="noResponse">"No response "</string>

    <string name="confCreateWidget">"Create widget"</string>
    <string name="confOpacity">"Opacity"</string>
    <string name="confWhite">"White background"</string>
    <string name="confBlack">"Black background"</string>

</resources>
