<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/widget_margin"
    tools:context="com.blogspot.developersu.nowol.nowol.com.blogspot.developersu.nowol.nowol.widget.WidgetConfigurator">

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/configOpacityLbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/confOpacity"
        android:textColor="@android:color/black" />

    <SeekBar
        android:id="@+id/configSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:max="100" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_weight="1" />

    <Switch
        android:id="@+id/configSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/confBlack" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/configBtnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/confCreateWidget" />

</LinearLayout>
