<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/widget_margin">

    <LinearLayout
        android:id="@+id/widgetHeaderLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorOrange"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/widget_margin"
        android:paddingRight="@dimen/widget_margin"
        android:weightSum="1">

        <TextView
            android:id="@+id/widgetStatusText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            android:shadowColor="@android:color/black"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:text="@string/statusTxtMain"
            android:textColor="@android:color/background_light"
            android:layout_marginStart="2dp" />

        <ImageButton
            android:id="@+id/widgetBntRefresh"
            style="@android:style/Widget.Holo.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/refreshBnt"
            android:padding="0dp"
            android:scaleType="fitEnd"
            android:src="@drawable/refresh_widget_button"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="2dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/widgetBodyLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/widgetHeaderLayout"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/widgetBtnReset"
            style="@android:style/Widget.Holo.ImageButton"
            android:src="@drawable/reset_widget_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:contentDescription="@string/resetBtnMain"
            android:background="@android:color/transparent"
            android:padding="0dp" />

        <ImageButton
            android:id="@+id/widgetBtnPwr5"
            style="@android:style/Widget.Holo.ImageButton"
            android:src="@drawable/pwr5_widget_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:contentDescription="@string/pwr5BntMain"
            android:padding="0dp"
            android:background="@android:color/transparent"
            />

        <ImageButton
            android:id="@+id/widgetBtnPwr"
            style="@android:style/Widget.Holo.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/pwr5BntMain"
            android:padding="0dp"
            android:src="@drawable/pwr_widget_button" />

    </LinearLayout>

</RelativeLayout>